# monocular-3d-detection

./: LICENSE  README.md  pipeline.py  pyproject.toml
monocular3d/: __init__.py  bbox.py  core.py  detector.py  geometry.py  visualization.py
